# hw-lib

./: .gitignore  README.md  pyproject.toml
keithley examples/: 00_creat_bat_for_scripts.py  00a_check_installation.py  00b_detect_connected_kley.py  00b_keithley_query_terminal.py  01a_keithley_acq_waveform_inter_terminal.ipynb  01a_keithley_acq_waveform_inter_terminal.py  01b_keithley_acq_waveform_check_jitter.py
labjack examples/: 00a_check_installation.py  01a_T8_acquire_standalone.ipynb  01b_T8_acquire_standalone_continuous.ipynb  01c_t8_stream.py  02a_ophyd_trigger_and_read_T8_asynchronous.ipynb  02a_ophyd_trigger_and_read_T8_asynchronous.py  02b_ophyd_trigger_and_read_T8_interactive.py  02c_ophyd_T8_simple_streaming.py  03a_blue_sky_scan_with_T8.py  03b_blue_sky_scan_with_T8_interactive_and_databroker.py  03b_blue_sky_scan_with_T8_interactive_with_tiled.ipynb  03b_blue_sky_scan_with_T8_interactive_with_tiled.py
src/: keithley_utils.py  ophyd_labjack_t8.py
