[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hw-lib"
version = "0.1.0"
description = "Standalone hardware acquisition library for LabJack T8 and Keithley"
requires-python = ">=3.12,<3.13"
dependencies = [
    "labjack-ljm",
    "numpy",
    "pandas",
    "plotly",
    "matplotlib",
    "pyserial",
    "wg-toolkit",
]

[project.optional-dependencies]
jupyter = [
    "scipy",
    "pyside6>=6.11.0",
    "ipython",
    "ipykernel",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.6",
    "notebook>=7.5.5",
    "jupyter-client>=8.8.0",
]

dev = [
    "nbstripout",
    "pytest",
]

[tool.uv.sources]
# wg-toolkit = { git = "https://github.com/wgrizolliALS/wg-toolkit.git" }
wg-toolkit = { path = "C:/Users/xrayopt/Python Projects/wg-toolkit", editable = true }  # local dev

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
